; ModuleID = '/home/carl/AnghaBench/glfw/deps/extr_tinycthread.c_thrd_exit.c'
source_filename = "/home/carl/AnghaBench/glfw/deps/extr_tinycthread.c_thrd_exit.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @thrd_exit(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i8*, align 8
  store i32 %0, i32* %2, align 4
  %4 = call i8* @malloc(i32 4)
  store i8* %4, i8** %3, align 8
  %5 = load i8*, i8** %3, align 8
  %6 = icmp ne i8* %5, null
  br i1 %6, label %7, label %11

7:                                                ; preds = %1
  %8 = load i32, i32* %2, align 4
  %9 = load i8*, i8** %3, align 8
  %10 = bitcast i8* %9 to i32*
  store i32 %8, i32* %10, align 4
  br label %11

11:                                               ; preds = %7, %1
  %12 = load i8*, i8** %3, align 8
  %13 = call i32 @pthread_exit(i8* %12)
  ret void
}

declare dso_local i8* @malloc(i32) #1

declare dso_local i32 @pthread_exit(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
